hide blog for now and change contact

--- a/src/pages/contact.mdx
+++ b/src/pages/contact.mdx
@@ -1,4 +1,4 @@
 # Contact us
 
-If you are interested in learning more about AQuA, or possibly incorporating it into your translation workflow,
-please contact cassie_weishaupt@sil.org.
+If you are interested in learning more about AQuA, Serval, the M2 Chat Platform, or any of the other things
+described here, please reach out to jeremy_hodes@sil.org.
