Small change to AQuA page

--- a/src/pages/Projects/AQuA.mdx
+++ b/src/pages/Projects/AQuA.mdx
@@ -133,15 +133,15 @@ The formal equivalence assessment gives insight into how formally equivalent or 
 <details>
   <summary><h5>Comprehensibility (Coming Soon)</h5></summary>
 
-  The comprehensibility assessment focuses on evaluating the understandability and completeness of information in the target text.
+  The comprehensibility assessment focuses on evaluating the understandability and completeness of information in a draft.
 
   <h6>How it works:</h6>
-  This assessment incorporates machine-generated question-answer pairs that correspond to the expected information within each verse. 
-  It requires a back translation of the draft text into a language of wider communication. 
+  <p>This assessment incorporates machine-generated question-answer pairs that correspond to the expected information within each verse. 
+  It requires a back translation of the draft text into a language of wider communication.</p>
 
-  Using a question-answering model, we provide the verse text as context and pose the corresponding question to the model. 
+  <p>Using a question-answering model, we provide the verse text as context and pose the corresponding question to the model. 
   We then compare the model's answer to the expected answer from the question-answer pair. 
-  If the model's answer differs significantly from the expected answer, it suggests the possibility of missing or incomplete information within the verse.
+  If the model's answer differs significantly from the expected answer, it suggests the possibility of missing or incomplete information within the verse.</p>
 
 </details>
 
